Fix weird extra margin at the bottom of masonry.

--- a/client/src/containers/Items/style.css
+++ b/client/src/containers/Items/style.css
@@ -1,9 +1,10 @@
-.masonry-wrapper{
+/* .masonry-wrapper{
   width: 100%;
-}
+} */
 
 .masonry{
   width: 100%;
+  /* height: 100%; */
   /* margin: 0 50px; */
 }
 .masonry-item{
@@ -13,11 +14,6 @@
   /* padding: 0; */
 }
 
-.share-button{
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-}
 
 
 @media screen and (min-width: 600px){
